# ogl_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.org
include/: audio.h  camera.h  clock.h  component.h  cylinder.h  entity.h  renderer.h  shape.h  skybox.h  texture.h  transform.h  utils.h  window.h
src/: camera.cpp  component.cpp  cylinder.cpp  entity.cpp  main.cpp  renderer.cpp  skybox.cpp  texture.cpp  transform.cpp  window.cpp
